// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableArea[Base] should render correctly  1`] = `
<div
  class="c-lboive soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="ci9t19m soui-editableArea-place cmccphs soui-editableArea-wrapper-padding-box c-2t2gzn soui-editableArea-wrapper-inner-title-top csrescj soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="c-vz36w4 soui-editableArea-content"
    >
      <span
        class="c-nvnjfu soui-editableArea-placeholder"
      >
        input something
      </span>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  2`] = `
<div
  class="c-lboive soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="ci9t19m soui-editableArea-place cmccphs soui-editableArea-wrapper-padding-box c-2t2gzn soui-editableArea-wrapper-inner-title-top csrescj soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="c-vz36w4 soui-editableArea-content"
    >
      i am a long text, i am a long text, i am a long text
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  3`] = `
<div
  id="popup-target"
  style="height: 100px; overflow-y: auto; position: relative; padding: 10px; margin-left: -10px;"
>
  <div
    style="height: 50px;"
  />
  <div
    class="c-lboive soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="ci9t19m soui-editableArea-place cmccphs soui-editableArea-wrapper-padding-box c-2t2gzn soui-editableArea-wrapper-inner-title-top csrescj soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-vz36w4 soui-editableArea-content"
      >
        <span
          class="c-nvnjfu soui-editableArea-placeholder"
        >
          scroll in container
        </span>
      </div>
    </div>
  </div>
  <div
    style="height: 140px;"
  />
</div>
`;

exports[`EditableArea[Base] should render correctly  4`] = `
<div>
  <div
    class="c-lboive soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="ci9t19m soui-editableArea-place cmccphs soui-editableArea-wrapper-padding-box c-2t2gzn soui-editableArea-wrapper-inner-title-top csrescj soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-vz36w4 soui-editableArea-content"
      >
        <span
          class="c-nvnjfu soui-editableArea-placeholder"
        >
          input something
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  5`] = `
<div>
  <div
    class="c-lboive soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="ci9t19m soui-editableArea-place cmccphs soui-editableArea-wrapper-padding-box c-2t2gzn soui-editableArea-wrapper-inner-title-top csrescj soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-vz36w4 soui-editableArea-content"
      >
        <div>
          Guessing what I inputed ?
        </div>
      </div>
    </div>
  </div>
</div>
`;
